# SERVIER_TEST_PYTHON_RAM

./: Dockerfile  README.md  conftest.py  pyproject.toml
Sql/: Req1.sql  Req2.sql
data/Landing/: Src_pubmed.json
data/Preparation/: clinical_trials.csv  pubmed.csv  pubmed.json
output/ad_hoc/: most_mentioned_journal.json
output/link_graph/: drug_mentions_graph.json
src/: ad_hoc.py  config.py  main.py
src/data_export/: export_json.py
src/data_ingestion/: load_data.py
src/data_processing/: cleaning.py  processing.py
tests/: test_ad_hoc.py  test_cleaning.py  test_export_json.py  test_load_data.py  test_processing.py
